@@ -5,6 +5,9 @@ Revision history for DBIx::Class::ResultSet::RecursiveUpdate
     - Get rid of discard_changes for each created row
       To further reduce the number of queries. This required to remove support
       for populating a column used by a has_many relationship by a related row.
+    - Reduce select queries for has_many relationships where the foreign key
+      column and the relationship is named the same and the related row is
+      specified as a hashref containing the foreign column
 
 0.40      2019-10-29 14:16:34+01:00 Europe/Vienna
     - Fix missing Try::Tiny dependency
